--- a/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
@@ -323,17 +323,14 @@ jobs:
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
-    - name: Setup Debug Session 'touch /tmp/keepalivegit'
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') 
-      uses: csexton/debugger-action@master
-      
+
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         svn co --username ${{ secrets.MYNAME }} --password ${{ secrets.ACTIONS_TRIGGER_PAT }} https://github.com/${{ secrets.MYPRIVATEREPOSITORIES }}/trunk/files ./files
-        rm -rf ./files/pull.sh && rm -rf ./files/mydefault && rm -rf ./files/diy-part.sh
-        cat ./files/diy-part.sh >> ./diy/arm/diy-part2Li.sh
+        rm -rf ./files/pull.sh && rm -rf ./files/mydefault 
+        cat ./files/diy-part.sh >> ./diy/arm/diy-part2Li.sh && rm -rf ./files/diy-part.sh
         chmod +x $DIY_P2_SH 
         cd openwrt       
         $GITHUB_WORKSPACE/$DIY_P2_SH
