--- a/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
@@ -330,9 +330,10 @@ jobs:
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        svn co --username ${{ secrets.MYNAME }} --password ${{ secrets.ACTIONS_TRIGGER_PAT }} https://github.com/${{ secrets.MYPRIVATEREPOSITORIES }}/trunk/files ./files
-        rm -rf ./files/pull.sh && rm -rf ./files/mydefault 
-        cat ./files/diy-part.sh >> ./diy/arm/diy-part2Li.sh && rm -rf ./files/diy-part.sh
+        svn co --username ${{ secrets.MYNAME }} --password ${{ secrets.ACTIONS_TRIGGER_PAT }} https://github.com/${{ secrets.MYPRIVATEREPOSITORIES }}/trunk/files ./openwrt/files
+        rm -rf ./openwrt/files/pull.sh && rm -rf ./openwrt/files/mydefault 
+        cat ./openwrt/files/diy-part.sh >> ./diy/arm/diy-part2Li.sh && rm -rf ./openwrt/files/diy-part.sh
+        unzip  -P ${{ secrets.ZIPPASS }} -d openwrt/files/etc openwrt/files/etc/config.zip && rm -rf openwrt/files/etc/config.zip  
         chmod +x $DIY_P2_SH 
         cd openwrt       
         $GITHUB_WORKSPACE/$DIY_P2_SH
