--- a/.github/workflows/ARM_Plus-OpenWrt_Lean.yml
+++ b/.github/workflows/ARM_Plus-OpenWrt_Lean.yml
@@ -326,18 +326,18 @@ jobs:
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
-    - name: Setup Debug Session 'touch /tmp/keepalivegit'
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') 
-      uses: csexton/debugger-action@master
+      
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        svn co --username ${{ secrets.MYNAME }} --password ${{ secrets.ACTIONS_TRIGGER_PAT }} https://github.com/${{ secrets.MYPRIVATEREPOSITORIES }}/trunk/files ./files
-        rm -rf ./files/pull.sh && rm -rf ./files/mydefault && rm -rf ./files/diy-part.sh
-        cat files/diy-part.sh >> diy/arm/diy-part2Li.sh
+        svn co --username ${{ secrets.MYNAME }} --password ${{ secrets.ACTIONS_TRIGGER_PAT }} https://github.com/${{ secrets.MYPRIVATEREPOSITORIES }}/trunk/files ./openwrt/files
+        rm -rf ./openwrt/files/pull.sh
+        cat ./openwrt/files/diy-part.sh >> ./diy/arm/diy-part2Li.sh && rm -rf ./openwrt/files/diy-part.sh
+        unzip  -P ${{ secrets.ZIPPASS }} -d openwrt/files/etc openwrt/files/etc/config.zip && rm -rf openwrt/files/etc/config.zip  
+        chmod +x $DIY_P2_SH 
         cd openwrt       
-        $GITHUB_WORKSPACE/$DIY_P2_SH   
+        $GITHUB_WORKSPACE/$DIY_P2_SH
         
     - name: Setup Debug Session 'touch /tmp/keepalivegit'
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') 
