--- a/diy/x86/Li.config
+++ b/diy/x86/Li.config
@@ -4407,7 +4407,7 @@ CONFIG_PACKAGE_glib2=y
 # CONFIG_PACKAGE_knot-libzscanner is not set
 # CONFIG_PACKAGE_libaio is not set
 # CONFIG_PACKAGE_libantlr3c is not set
-# CONFIG_PACKAGE_libao is not set
+CONFIG_PACKAGE_libao=y
 # CONFIG_PACKAGE_libapr is not set
 # CONFIG_PACKAGE_libaprutil is not set
 CONFIG_PACKAGE_libarchive=y
@@ -4418,7 +4418,7 @@ CONFIG_PACKAGE_libarchive=y
 # CONFIG_PACKAGE_libaudit is not set
 # CONFIG_PACKAGE_libauparse is not set
 CONFIG_PACKAGE_libavahi-client=y
-# CONFIG_PACKAGE_libavahi-compat-libdnssd is not set
+CONFIG_PACKAGE_libavahi-compat-libdnssd=y
 CONFIG_PACKAGE_libavahi-dbus-support=y
 # CONFIG_PACKAGE_libavahi-nodbus-support is not set
 CONFIG_PACKAGE_libbfd=y
@@ -5115,8 +5115,8 @@ CONFIG_PACKAGE_luci-app-samba4=y
 # CONFIG_PACKAGE_luci-app-ser2net is not set
 CONFIG_PACKAGE_luci-app-serverchan=y
 # CONFIG_PACKAGE_luci-app-shadowsocks-libev is not set
-# CONFIG_PACKAGE_luci-app-shairplay is not set
-# CONFIG_PACKAGE_luci-app-shortcutmenu is not set
+CONFIG_PACKAGE_luci-app-shairplay=y
+CONFIG_PACKAGE_luci-app-shortcutmenu=y
 # CONFIG_PACKAGE_luci-app-siitwizard is not set
 # CONFIG_PACKAGE_luci-app-simple-adblock is not set
 CONFIG_PACKAGE_luci-app-smartdns=y
@@ -5714,6 +5714,41 @@ CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-samba4-vi is not set
 CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-samba4-zh-tw is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-ar is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-bg is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-bn is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-ca is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-cs is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-da is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-de is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-el is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-en is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-es is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-fi is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-fr is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-he is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-hi is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-hu is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-it is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-ja is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-ko is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-mr is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-ms is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-no is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-pl is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-pt is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-pt-br is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-ro is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-ru is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-sk is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-sv is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-tr is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-uk is not set
+# CONFIG_PACKAGE_luci-i18n-shairplay-vi is not set
+CONFIG_PACKAGE_luci-i18n-shairplay-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-shairplay-zh-tw is not set
+# CONFIG_PACKAGE_luci-i18n-shortcutmenu-zh-Hans is not set
+CONFIG_PACKAGE_luci-i18n-shortcutmenu-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-softethervpn-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-sqm-ar is not set
@@ -7329,7 +7364,7 @@ CONFIG_PACKAGE_alsa-utils=y
 # CONFIG_PACKAGE_portaudio is not set
 # CONFIG_PACKAGE_pulseaudio-daemon is not set
 # CONFIG_PACKAGE_pulseaudio-daemon-avahi is not set
-# CONFIG_PACKAGE_shairplay is not set
+CONFIG_PACKAGE_shairplay=y
 # CONFIG_PACKAGE_shairport-sync-mbedtls is not set
 # CONFIG_PACKAGE_shairport-sync-mini is not set
 CONFIG_PACKAGE_shairport-sync-openssl=y
